<resources>
    <string name="app_name">SMD_1</string>
    <string name="chatify">Chatify</string>
    <string name="calls">Calls</string>
    <string name="messages">Messages</string>
    <string name="sign_up">Sign-Up</string>
    <string name="exit">Exit</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="retype_password">Retype Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="no_calls">No Calls</string>
    <string name="no_messages">No Messages</string>
    <string name="screen_1">Screen 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="_3431_nposts">3431\nPosts</string>
    <string name="_6530_nfollowers">6530\nFollowers</string>
    <string name="_217_nfollowing">217\nFollowing</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_name">Your Name</string>
    <string name="your_bio_goes_here_nand_here_too">Your bio goes here.....\nand here too.</string>
</resources>