<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyblue"
    android:orientation="vertical"
    tools:context=".MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:paddingTop="80dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatify"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@android:drawable/stat_notify_chat"
         />
 </LinearLayout>
   <LinearLayout
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center"
       android:layout_margin="70dp">

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/first_name"
           android:textColorHint="@color/Hint"
           android:padding="20dp"
           android:textColor="@color/white"
           />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/last_name"
           android:textColorHint="@color/Hint"
           android:padding="20dp"
           android:textColor="@color/white"
           />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email_id"
           android:textColorHint="@color/Hint"
           android:padding="20dp"
           android:textColor="@color/white"
           />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:textColorHint="@color/Hint"
           android:padding="20dp"
           android:textColor="@color/white"
           />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="20dp"
           android:hint="@string/retype_password"
           android:textColorHint="@color/Hint"
           android:textColor="@color/white"
           />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:paddingRight="30dp"
            android:textColor="@color/white"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/white"/>

    </RadioGroup>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dp"
    android:paddingTop="10dp"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/Bexit"
        android:layout_marginHorizontal="30dp"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/Bsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/sign_up" />
</LinearLayout>

   </LinearLayout>


</LinearLayout>