<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/navyblue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="35dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@color/navyblue"
                    android:id="@+id/Bback"
                    android:src="@android:drawable/ic_menu_revert"
                    android:theme="@style/CardView.Light"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_1"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:layout_width="154dp"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="@string/calls"
                    android:id="@+id/call"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/navyblue"
                    android:drawableLeft="@android:drawable/stat_sys_phone_call"
                    />



                <Button
                    android:layout_width="154dp"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="@string/messages"
                    android:id="@+id/message"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/navyblue"
                    android:drawableLeft="@android:drawable/sym_action_chat"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:id="@+id/frag_container"
        >

        <fragment
            android:id="@+id/fragcall"
            android:name="com.example.smd_1.fragcall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout="@layout/call_frag" />

        <fragment
            android:id="@+id/fragmessage"
            android:name="com.example.smd_1.fragmessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout="@layout/message_frag" />
    </LinearLayout>


</LinearLayout>